--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 body{
     background-color: #adadad;
+    color: aliceblue;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
@@ -11,7 +14,7 @@ body{
     padding: 0;
     text-decoration: none;
 
-    font-family: ;
+    font-family: "Montserrat", sans-serif;
 }
 
 .nav{
@@ -20,7 +23,7 @@ body{
     align-items: center;
     padding: 10px 20px;
     color: white;
-    background-color: white;
+    background-color: rgb(41, 71, 221);
     top: 0;
     left: 0;
     right: 0;
@@ -30,10 +33,22 @@ body{
     border-radius: 0 0 10px 10px;
 }
 
+.logo-container{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo{
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+}
+
 nav ul{
     display: flex;
     list-style: none;
-    gap: 5px;
+    gap: 1px;
     margin: 0;
 }
 
@@ -56,7 +71,7 @@ nav ul li a.active{
 nav h1{
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
+    object-fit: cover;
     text-align: center;
     color: black;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -69,11 +84,11 @@ nav h1{
 }
 
 input[type="text"]{
-    padding: 10px;
+    padding: 19px;
     border-radius: 5px;
     border: none;
-    background-color: cyan;
-    width: 250px;
+    background-color: rgb(145, 145, 145);
+    width: 250px;;
 }
 
 input[type="text"]:focus{
